Fix footer overflow on small screens
On small screens, sometimes the bottom of the footer didn't have the
footer's background color.

I'm not sure why the `min-height` rule affects this outcome. However,
since this rule usually results in footer with quite a bit of empty
space at the bottom, we can simpliy remove the rule and use padding to
guarantee there's a bit of space between the text in the footer and the
bottom of the screen.

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -914,7 +914,7 @@ footer {
   background: #f1f1f1;
   clear: both;
   margin-top: $line-height * 2;
-  min-height: $line-height * 12;
+  padding-bottom: $line-height;
   padding-top: $line-height;
 }
 
